Eye icon for viewport visibility does not work in rendered mode for internal. #38318

Closed
opened 2014-01-22 14:46:47 +01:00 by Maverick · 17 comments

System Information
Operating system and graphics card
win64 i7 gtx titan

Blender Version
Broken: 2.69.9 6cd132b

Short description of error
Eye icon for viewport visibility does not work in rendered mode for internal.

Exact steps for others to reproduce the error
Default scene, blender internal, switch to rendered viewport mode. Try to disable the Cube.
It doesn't work, the eye icon does nothing. The Rendered icon toggle viewport visibility though.

**System Information** Operating system and graphics card win64 i7 gtx titan **Blender Version** Broken: 2.69.9 6cd132b **Short description of error** Eye icon for viewport visibility does not work in rendered mode for internal. **Exact steps for others to reproduce the error** Default scene, blender internal, switch to rendered viewport mode. Try to disable the Cube. It doesn't work, the eye icon does nothing. The Rendered icon toggle viewport visibility though.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Brecht Van Lommel self-assigned this 2014-01-22 15:45:15 +01:00

Well, this is how it has always worked and was intended as far as I know. For Cycles I decided to use viewport visibility by default and add an option to use render visibility by selecting to render according to the active render layer. But there is no such option for Blender Internal and I don't want to spend the time to implement it.

I can easily change it to always use viewport visibility but I don't know if that's better.

Well, this is how it has always worked and was intended as far as I know. For Cycles I decided to use viewport visibility by default and add an option to use render visibility by selecting to render according to the active render layer. But there is no such option for Blender Internal and I don't want to spend the time to implement it. I can easily change it to always use viewport visibility but I don't know if that's better.
Author

If changing it means to use the eye icon for viewport while the camera icon works for rendering (F12) then that is fine.
I hope this won't affect baking since it uses the Render icon as well afaik.

If changing it means to use the eye icon for viewport while the camera icon works for rendering (F12) then that is fine. I hope this won't affect baking since it uses the Render icon as well afaik.
Author

Oh, so there is just one option for BI..
Then just leave it like this..It would be even more confusing for rendering.
Too bad. Once Cycles supports baking it would not matter anyway.

Oh, so there is just one option for BI.. Then just leave it like this..It would be even more confusing for rendering. Too bad. Once Cycles supports baking it would not matter anyway.

This issue was referenced by blender/blender-addons-contrib@162d6c73e3

This issue was referenced by blender/blender-addons-contrib@162d6c73e3d0799303dcdfc19e744cfeb8d10e5f

This issue was referenced by 162d6c73e3

This issue was referenced by 162d6c73e3d0799303dcdfc19e744cfeb8d10e5f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 162d6c73e3.

Closed by commit 162d6c73e3.

No, it's about what's best for some people's workflow, some might want to see render visibility in the viewport and others viewport visibility. Anyway I changed it now to use viewport visibility, we'll see if someone complains about this because their workflow relied on it.

No, it's about what's best for some people's workflow, some might want to see render visibility in the viewport and others viewport visibility. Anyway I changed it now to use viewport visibility, we'll see if someone complains about this because their workflow relied on it.
Author

Viewport visibility is used to optimize viewport performance on heavy scenes. Same idea is used on the modifiers.
So now it will render (F12) what is visible in the viewport !? Or this just affects rendered mode ?

Viewport visibility is used to optimize viewport performance on heavy scenes. Same idea is used on the modifiers. So now it will render (F12) what is visible in the viewport !? Or this just affects rendered mode ?

It only affects viewport rendered draw mode.

It only affects viewport rendered draw mode.
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke
Member

Committed d81f492d08 to bring back the previous behavior that rendered viewport always uses render visibility, because 162d6c73e3 caused some problems. For example, mesh deform cage is drawn as a solid/textured mesh (not a wireframe mesh) and its unnecessary surfaces and shadows mess up the preview.

We need more discussion about the way to take viewport visibility into account.

Committed d81f492d08e6 to bring back the previous behavior that rendered viewport always uses render visibility, because 162d6c73e3d0 caused some problems. For example, mesh deform cage is drawn as a solid/textured mesh (not a wireframe mesh) and its unnecessary surfaces and shadows mess up the preview. We need more discussion about the way to take viewport visibility into account.

Added subscriber: @smonbrogg

Added subscriber: @smonbrogg

I find it confusing that object visibility in the viewport rendering behaves different to the real rendering.
In my opinion it would make much more sense if object visibility would behave the same in viewport and final rendering.

I find it confusing that object visibility in the viewport rendering behaves different to the real rendering. In my opinion it would make much more sense if object visibility would behave the same in viewport and final rendering.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38318
No description provided.