Fix T38318: blender internal viewport now uses viewport, not render visibility.

This is the same as cycles and more consistent with it also using viewport
resolution.